--- a/produtos.css
+++ b/produtos.css
@@ -3,6 +3,7 @@
   transition-duration: 0.2s;
 }
 body {
+  background-image: url(miau\ \(3\).png);
   background-color: rgb(212, 212, 212);
   display: flex;
   flex-direction: row;
